cabal-version:       2.2
name:                keybase-chat-gtk
version:             0.1.0.0
synopsis:            Gtk frontend for keybase chat
-- description:
homepage:            https://git.zenhack.net/zenhack/keybase-chat-gtk
license:             GPL-3.0-or-later

license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2019 Ian Denhardt

build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://git.zenhack.net/zenhack/keybase-chat-gtk

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base ^>=4.12
    , data-default ^>=0.7.1
    , zenhack-prelude ^>=0.1
    , unliftio-core ^>=0.1.2
    , typed-process ^>=0.2.6
    , aeson ^>=1.4.4
    , text ^>=1.2.3
    , extra ^>=1.6.17
    , gi-gtk ^>=3.0.31
    , gi-gtk-declarative ^>=0.5
    , gi-gtk-declarative-app-simple ^>=0.5
    , vector ^>=0.12.0
    , bytestring ^>=0.10.10
    , safe-exceptions ^>=0.1.7
    , pipes ^>=4.3.11
    , stm ^>=2.5.0
    , async ^>=2.2.1
  -- Required by gi-gtk-declarative:
  ghc-options: -threaded
  default-language:    Haskell2010

library keybase-chat-api
  import: shared-opts
  exposed-modules:
      Api
    , Api.Types
    , App
    , UI.Model
    , UI.View
    , UI.Update
  hs-source-dirs:      src

executable keybase-chat-gtk
  import: shared-opts
  build-depends: keybase-chat-api
  hs-source-dirs: exe
  main-is: Main.hs

test-suite tests
  import: shared-opts
  build-depends:
      keybase-chat-api
    , hspec ^>=2.7.1
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
